--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ href="https://github.com/cloudfoundry/bosh-bootloader">bosh-bootloader</a></li>
 <h1>Thanks!</h1>
 <p><code>@AkshayMankar</code></p>
 <p><code>@suhlig</code></p>
-<p><code>http://zero2cfin30s.eirini.cf</code></p>
+<p><code>https://suhlig.github.io/zero-to-cf-in-30-seconds</code></p>
 </section>
 <section id="eirini-sessions" class="slide level1">
 <h1>Eirini Sessions</h1>
@@ -370,7 +370,7 @@ Akshay Mankar<br/> 3:40pm - 4:10pm
 <section id="meta" class="slide level1">
 <h1>Meta</h1>
 <div class="mini">
-Rev. e984b48* <br/> built on 2023-11-11 15:48:39 UTC
+Rev. 4a154d2 <br/> built on 2023-11-11 16:23:00 UTC
 </div>
 </section>
     </div>
